detalles escuela formulario detalles dropdown (falta licencia de nuevo)

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -60,7 +60,7 @@
 							<div uk-dropdown="animation: uk-animation-slide-top-small; mode: click">
 								<ul class="uk-nav uk-dropdown-nav uk-text-left">
 									<li>
-										<h:link styleClass="uk-link-reset" outcome="detalle-escuela">
+										<h:link styleClass="uk-link-reset" outcome="detallesEscuela">
 											<h:outputText pt:uk-icon="icon: file-text" styleClass="uk-margin-small-right"/>
 											<h:outputText value="#{mensaje['button.detail']}"/>
 											<f:param value="#{escuela.claveCentroTrabajo}" name="claveCentroTrabajo"/>
