--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -49,7 +49,7 @@
 									value="#{mensaje['school.postalcode']}" for="input-cp" />
 								<div class="uk-form-controls">
 									<h:inputText styleClass="uk-input"
-										value="#{escuelaDetalleControlador.escuelaDetalleDto.codigoPostal}" disabled="true"
+										value="#{escuelaDetalleControlador.escuelaDetalleDto.coloniaDto.codigoPostal}" disabled="true"
 										id="input-cp" label="#{mensaje['school.postalcode']}">
 									</h:inputText>
 								</div>
