--- a/tecolotl-web/src/main/webapp/administracion/detallesEscuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detallesEscuela.xhtml
@@ -12,7 +12,7 @@
     <ui:define name="contenido2">
         <h:outputStylesheet library="css" name="tablas.css"/>
 
-            <h1 class="uk-heading-line uk-text-center uk-padding-small" ><span >Detalles de la Escuela</span></h1>
+            <h1 class="uk-heading-line uk-text-center uk-padding-small" ><span >#{mensaje['school.details.heading']}</span></h1>
 
             <h2 class="uk-text-center uk-margin-medium-top uk-background-primary uk-padding-small"><span class="letra-titulo">Datos de la escuela</span></h2>
 
@@ -88,7 +88,7 @@
         <div uk-grid="" class="uk-margin-medium-top ">
 
             <div class="uk-width-auto@m uk-overflow-auto uk-width-expand@s ">
-                <h3 class="uk-text-center uk-heading-line "><span class="">Contactos</span></h3>
+                <h3 class="uk-text-center uk-heading-line "><span class="">#{mensaje['school.details.contact']}</span></h3>
 
                 <h:form id="formulario-tabla-contacto">
                     <h:dataTable id="tabla-contacto"
@@ -112,20 +112,24 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header"><h:outputText value="#{mensaje['school.details.table.type']}" styleClass="letra-titulo"/> </f:facet>
-                            <button class="uk-icon-button uk-margin-small-right" uk-icon="icon: more-vertical" ></button>
+
                             <div class=" boundary">
+                                <button class="uk-icon-button uk-margin-small-right" uk-icon="icon: more-vertical" ></button>
                                 <div uk-dropdown="mode: click; boundary: .boundary">
                                     <ul class="uk-nav uk-dropdown-nav">
-                                        <li>
-                                            <span uk-icon="icon: trash" styleClass="uk-margin-small-right"></span>
-                                            <h:outputText styleClass="uk-text-right uk-text-bold " value="Eliminar">
-                                            </h:outputText>
+                                        <li class="uk-text-left">
+
+                                            <h:commandLink styleClass="uk-link-reset">
+                                                <h:outputText pt:uk-icon="icon: trash" styleClass="uk-margin-small-right" />
+                                                <h:outputText styleClass="uk-text-right uk-text-bold " value="Eliminar"/>
+                                            </h:commandLink>
                                         </li>
-                                        <li>
-                                            <span uk-icon="icon: settings" styleClass="uk-margin-small-right"></span>
-                                            <h:outputText styleClass="uk-text-right uk-text-bold" value="Modificar">
-                                                <!--<a class="uk-link-reset" href="#modal-modificar" uk-toggle="">Modificar</a>-->
-                                            </h:outputText>
+                                        <li class="uk-text-left">
+
+                                            <h:commandLink styleClass="uk-link-reset">
+                                                <h:outputText pt:uk-icon="icon: settings" styleClass="uk-margin-small-right" />
+                                                <h:outputText class="uk-text-right uk-text-bold" value="Modificar"/>
+                                            </h:commandLink>
                                         </li>
                                     </ul>
                                 </div>
@@ -142,36 +146,36 @@
                 </h:form>
 
 
-                <div class="uk-flex uk-flex-right uk-margin-small-top "><button class="uk-button uk-button-primary"  uk-toggle="target: #modal-agregar-contacto" ><span >Agregar</span> <span class="uk-margin-small-left " uk-icon="icon: plus-circle"></span> </button></div>
+                <div class="uk-flex uk-flex-right uk-margin-small-top "><button class="uk-button uk-button-primary"  uk-toggle="target: #modal-agregar-contacto" ><span >#{mensaje['button.add']}</span> <span class="uk-margin-small-left " uk-icon="icon: plus-circle"></span> </button></div>
             </div>
 
 
             <div class="uk-width-auto@m uk-overflow-auto ">
 
-                <h3 class=" uk-text-center uk-heading-line"><span>Licencias</span></h3>
-                <table class="uk-table uk-table-small uk-table-divider uk-table-hover uk-table-middle">
-                    <thead class="uk-text-center">
-                    <tr class="uk-background-primary ">
-                        <th><span class="letra-titulo">ID</span></th>
-                        <th class="uk-text-center"><span class="letra-titulo">Usuarios Restantes</span></th>
-                    </tr>
-                    </thead>
-                    <tbody class="uk-text-center">
-                    <tr>
-                        <td>1</td>
-                        <td>0</td>
-                    </tr>
-                    <tr class="">
-                        <td>2</td>
-                        <td >52</td>
-                    </tr>
+                <h3 class=" uk-text-center uk-heading-line"><span>#{mensaje['school.details.license']}</span></h3>
+                <h:dataTable id="tabla-licencias"
+                             styleClass="uk-table uk-table-small uk-table-divider uk-table-hover uk-table-middle"
+                             var="licencias"
+                             value=""
+                             rowClasses="uk-text-center"
+                             headerClass="uk-background-primary uk-text-center"
+                             >
+                    <h:column>
+                        <f:facet name="header"><h:outputText styleClass="letra-titulo" value="ID"></h:outputText></f:facet>
+                            1
 
-                    </tbody>
-                </table>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header"><h:outputText styleClass="letra-titulo" value="Usuarios Restantes"></h:outputText></f:facet>
+                            52
+                    </h:column>
+
+                </h:dataTable>
                 <div class="uk-flex uk-flex-right"><button class="uk-button uk-button-primary" uk-toggle="target: #modal-agregar-licencia" ><span >Agregar</span> <span class="uk-margin-small-left " uk-icon="icon: plus-circle"></span> </button></div>
 
 
             </div>
+
         </div>
 
         <script type="text/javascript">
@@ -231,6 +235,8 @@
             function limpiaInput() {
                 document.querySelectorAll('.uk-select').forEach(function (value) { value.removeAttribute('size') });
             }
+
+
         </script>
 
 
