Catalogo - Motivos bloqueo listo para pruebas

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -277,7 +277,7 @@
 			</h:panelGroup>
 			<h:panelGroup layout="block" id="modal-escuela" class="uk-modal-container" pt:uk-modal="">
 				<div class="uk-modal-dialog uk-margin-auto-vertical">
-					<h:form id="formulario-escuela">
+					<h:form id="formulario-escuela" styleClass="uk-form-stacked">
 						<div class="uk-modal-header uk-background-secondary">
 							<p class="uk-h4 uk-text-center uk-text-bold uk-text-capitalize">
 								<h:outputText value="#{escueladashboard['modal.add.title']}" styleClass="letra-titulo" rendered="#{empty escuelaDashboardControlador.escuelaDetalleDtoModelo.claveCentroTrabajo}"/>
