Estidad de escuela, iniciando pruebas unitarias

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -60,7 +60,7 @@
 							<div uk-dropdown="animation: uk-animation-slide-top-small; mode: click">
 								<ul class="uk-nav uk-dropdown-nav uk-text-left">
 									<li>
-										<h:link outcome="detalle-escuela">
+										<h:link outcome="detallesEscuela">
 											<h:outputText pt:uk-icon="icon: file-text" styleClass="uk-margin-small-right"/>
 											<h:outputText value="#{boton['detail']}" styleClass="uk-text-capitalize uk-text-bold"/>
 											<f:param value="#{escuela.claveCentroTrabajo}" name="claveCentroTrabajo"/>
